--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <div class="get-the-app">
                 <p class="get-app">baixe o aplicativo</p>
                 <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                    <a href="https://www.apple.com/br/app-store/" class="app-download"></a>
+                    <a href="https://play.google.com/store?hl=pt_BR&gl=US" class="app-download"></a>
                 </div>
             </div>
         </div>
