--- a/index.html
+++ b/index.html
@@ -22,18 +22,15 @@
                 <div class="profile-photo">
                     <img src="./img/perfil-instagram.jpg " alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como PlanbWebapps</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
+                <a href="#" class="instagram-login">Continuar como Fabio salles</a>
+
             </div>
             <div class="group">
-                <p class="not-account">Não é Planbwebapps</p>
-                <p class="not-account">
-                    <span class="link-blue"> Alterar conta</span> ou
-                    <span class="link-blue"> inscreva-se!</span>
-                </p>
+                <p class="not-account">Não é Fabio Salles?<span class="link-blue"> Trocar de conta</span> </p>
+
             </div>
             <div class="get-the-app">
-                <p class="get-app">baixe o aplicativo</p>
+                <p class="get-app">Baixe o aplicativo</p>
                 <div class="download">
                     <a href="https://www.apple.com/br/app-store/" class="app-download"></a>
                     <a href="https://play.google.com/store?hl=pt_BR&gl=US" class="app-download"></a>
